project(chapter02)
cmake_minimum_required(VERSION 3.1.4)




add_executable(${PROJECT_NAME}.2.2.exe chapter.2.2.cpp)
add_executable(${PROJECT_NAME}.2.2-minimal.exe chapter.2.2-minimal.cpp)
add_executable(${PROJECT_NAME}.2.3.exe chapter.2.3.cpp)
add_executable(${PROJECT_NAME}.2.6.exe chapter.2.6.cpp)


add_executable(HelloWorld.exe HelloWorld.cpp)