project(chapter03)
cmake_minimum_required(VERSION 3.1.4)




add_executable(${PROJECT_NAME}.3.1.exe chapter.3.1.cpp)
add_executable(${PROJECT_NAME}.3.2.exe chapter.3.2.cpp)
add_executable(${PROJECT_NAME}.3.3-second.exe chapter.3.3-second.cpp)
add_executable(${PROJECT_NAME}.3.4.exe chapter.3.4.cpp)
add_executable(${PROJECT_NAME}.3.5.exe chapter.3.5.cpp)
add_executable(${PROJECT_NAME}.3.6.1.exe chapter.3.6.1.cpp)
add_executable(${PROJECT_NAME}.3.7.exe chapter.3.7.cpp)
add_executable(${PROJECT_NAME}.3.8.exe chapter.3.8.cpp)
add_executable(${PROJECT_NAME}.3.9.1.exe chapter.3.9.1.cpp)
add_executable(${PROJECT_NAME}.3.9.2.exe chapter.3.9.2.cpp)
add_executable(${PROJECT_NAME}.3.9.exe chapter.3.9.cpp)