project(chapter04)
cmake_minimum_required(VERSION 3.1.4)




add_executable(${PROJECT_NAME}.4.3.2.exe chapter.4.3.2.cpp)
add_executable(${PROJECT_NAME}.4.3.3.exe chapter.4.3.3.cpp)
add_executable(${PROJECT_NAME}.4.4.1.1.exe chapter.4.4.1.1.cpp)
add_executable(${PROJECT_NAME}.4.4.1.2.exe chapter.4.4.1.2.cpp)
add_executable(${PROJECT_NAME}.4.4.2.3.exe chapter.4.4.2.3.cpp)
add_executable(${PROJECT_NAME}.4.5.1.exe chapter.4.5.1.cpp)
add_executable(${PROJECT_NAME}.4.5.exe chapter.4.5.cpp)
add_executable(${PROJECT_NAME}.4.6.1.exe chapter.4.6.1.cpp)
add_executable(${PROJECT_NAME}.4.6.2-average.exe chapter.4.6.2-average.cpp)
add_executable(${PROJECT_NAME}.4.6.3.exe chapter.4.6.3.cpp)
add_executable(${PROJECT_NAME}.4.6.exe chapter.4.6.cpp)
add_executable(${PROJECT_NAME}.4.exe chapter.4.cpp)
add_executable(${PROJECT_NAME}.4.5.2exe chapter.4.5.2.cpp)
