project(chapter08)
cmake_minimum_required(VERSION 3.1.4)



add_executable(${PROJECT_NAME}.8.7.exe chapter.8.7.cpp)
add_executable(${PROJECT_NAME}.8.6.exe chapter.8.6.cpp)
add_executable(${PROJECT_NAME}.8.5.7.exe chapter.8.5.7.cpp)
add_executable(${PROJECT_NAME}.8.5.6.exe chapter.8.5.6.cpp)
add_executable(${PROJECT_NAME}.8.5.3.exe chapter.8.5.3.cpp)
