project(chapter10)
cmake_minimum_required(VERSION 3.1.4)



add_executable(${PROJECT_NAME}.10.4-input.exe chapter.10.4-input.cpp)
add_executable(${PROJECT_NAME}.10.4-output.exe chapter.10.4-output.cpp)
add_executable(${PROJECT_NAME}.10.5.exe chapter.10.5.cpp)
add_executable(${PROJECT_NAME}.10.9.exe chapter.10.9.cpp)
