project(assignments2024)

cmake_minimum_required(VERSION 3.1.4)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

add_executable(ass1.0.exe ass1.0.cpp)
add_executable(ass2.0.exe ass2.0.cpp)
#add_executable(ass3.0.exe ass3.0.cpp)
#add_executable(ass3.0.exe ass3.0.cpp)
